[gd_scene load_steps=5 format=3 uid="uid://t4o4c2n66rv6"]

[ext_resource type="Script" uid="uid://cvbenhlicq2je" path="res://dialogs/dialog_ui.gd" id="1_mpm8t"]
[ext_resource type="Texture2D" uid="uid://pk1yjnlftm6q" path="res://icon.svg" id="2_3vfoc"]
[ext_resource type="Theme" uid="uid://cs5ilfumn5kvs" path="res://dialogs/ui_style.tres" id="3_iyfys"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mpm8t"]

[node name="DialogUi" type="Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1e-05)
script = ExtResource("1_mpm8t")

[node name="CharacterLeft" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 67.0
offset_top = -333.0
offset_right = 195.0
offset_bottom = -205.0
grow_vertical = 0
texture = ExtResource("2_3vfoc")

[node name="CharacterRight" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -213.0
offset_top = -330.0
offset_right = -85.0
offset_bottom = -202.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("2_3vfoc")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -220.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_iyfys")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_iyfys")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="Text" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "HOla soy un texto de prueba!!"
fit_content = true

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_mpm8t")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
